testdata/invalid/type_invalid_14.lisp
;;error:3:16-24:incomplete display definition
;;error:4:16-24:unknown display definition
(defcolumns (X :display))
(defcolumns (Y :display :int))
